--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -12,5 +12,9 @@
         background-image: linear-gradient(135deg, #bdc3e1 0%, #f9917e 100%);
 
         background-clip: text;
+
+        background-size: 200%;
+
+        background-position-x: 0%;
     }
 }
