--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -1,39 +1,47 @@
 @use "../utils/" as *;
 
 .index {
-    height: 100%;
+    height: 100dvh;
     flex: 1;
 
     position: relative;
 
     &__menu-container {
         backdrop-filter: blur(20px);
-        position: absolute;
-        height: 500px;
 
-        width: 80%;
+        position: fixed;
+        top: 80;
 
-        transition: translate 350ms ease-in-out;
+        width: 85%;
+        height: 100dvh;
+
         translate: -100% 0%;
+        transition: translate 350ms ease-in-out;
+
+        border: 2px solid rgb(212, 212, 212);
+        border-left: none;
+
+        padding: 10px;
+        padding-right: 0;
 
         &.active {
             translate: 0% 0%;
         }
 
-        border: 2px solid rgb(212, 212, 212);
+
     }
 
     &__css-gradient {
-        background-image: linear-gradient(90deg, #bdc3e1 0%, #f9917e 100%);
-        height: 150px;
+        background-image: linear-gradient(90deg, #bdc3e1 50%, #f9917e 50%);
+        height: 100%;
     }
 
     &__svg-gradient {
-        height: 150px;
+        height: 100%;
     }
 
     &__canvas-gradient {
-        height: 150px;
+        height: 100%;
     }
 }
 
@@ -41,4 +49,129 @@
 .menu {
 
     width: 100%;
+
+    color: white;
+
+    &__add-color-button {
+        background-color: blue;
+
+        padding-inline: 10px;
+        padding-block: 5px;
+
+        border-radius: 100vmax;
+    }
+
+    &__table-container {
+        --_scrollbar-bg: rgba(255, 255, 255, 25%);
+
+        --_scrollbar-thumb-border-width: 0;
+        --_scrollbar-thumb-bg: white;
+        --_scrollbar-thumb-bg-hover: rgba(255, 255, 255, 80%);
+        --_scrollbar-thumb-bg-active: #cfcfcf;
+
+        max-height: 300px;
+
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+
+
+    &__table {
+        // 
+        display: flex;
+        flex-direction: column;
+
+        height: 100%;
+        width: 100%;
+    }
+
+    &__table-body {
+        // 
+        display: block;
+        flex: 1;
+
+    }
+
+    &__table-row {
+        --_background-color: #3b3b3b57;
+
+        background-color: var(--_background-color);
+        // 
+        display: table;
+        table-layout: fixed;
+
+        width: 100%;
+
+        border-radius: 10px;
+        border: 2px solid transparent;
+        transition: border-color .25s;
+
+        padding: 4px 6px;
+
+        &:not(:last-child) {
+            margin-bottom: 10px;
+        }
+
+
+        @include tablet-only {
+            @include center-flex-column(5px);
+
+            text-align: center;
+        }
+
+        @include mobile-only {
+            @include center-flex-column(5px);
+
+            text-align: center;
+        }
+    }
+
+    &__table-cell {
+        // 
+        width: min-content;
+        text-align: center;
+
+        // background-color: var(--semi-transparent-bg);
+        // border-radius: 8px;
+        // border: 2px solid transparent;
+        // transition: border-color .25s;
+
+        // padding: 4px 6px;
+
+
+
+
+        font-family: inherit;
+
+    }
+
+    &__table-cell-content {
+        @include center-flex(5px);
+    }
+
+
+    &__label {
+        //
+    }
+
+    &__input {
+        //
+    }
+
+
+    &__order-changer {
+        font-size: 16px;
+        font-weight: 500;
+
+        border: 2px solid currentColor;
+        padding: 10px;
+    }
+
+
+    &__gradient-types {}
+
+    &__creation-language {}
+
+    &__orientation {}
+
 }
