--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -3,12 +3,6 @@
     --bg-secondary: #f0efef;
     --bg-tertiary: #676767;
 
-
-    --test: #406273;
-    --test: rgb(64, 98, 115);
-    --test: hsl(200, 28%, 35%);
-    --test: hwb(200, 25%, 55%);
-
     --semi-transparent-bg: rgba(255, 255, 255, 50%);
 
     --color-primary: black;
